Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124183

[gstreamer] tst_QCameraBackend::testNativeMetadata test failure due to duration timeout error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • None
    • 6.8
    • Multimedia
    • Linux/X11
    • 99a788360 (dev), bd08b0d89 (6.7), 794fc19c5 (tqtc/lts-6.5)
    • Multimedia wk 17-18, Multimedia wk 19-20

    Description

      `tst_QCameraBackend::testNativeMetadata` tests fails in rare cases: if it fails we get:

      PASS   : tst_QCameraBackend::cleanupTestCase()
      PASS   : tst_QCameraBackend::initTestCase()
      FAIL!  : tst_QCameraBackend::testNativeMetadata() 'durationChanged.size()' returned FALSE. ()
         Loc: [/home/tim/dev/qt6-dev/qtmultimedia/tests/auto/integration/qcamerabackend/tst_qcamerabackend.cpp(671)]
      PASS   : tst_QCameraBackend::cleanupTestCase()
      Totals: 78 passed, 1 failed, 38 skipped, 0 blacklisted, 43103ms
      

      in this case `stop()` is called from an error handler before we update the pipeline:

      QDEBUG : tst_QCameraBackend::testNativeMetadata() virtual bool QGstreamerMediaEncoder::processBusMessage(const QGstreamerMessage &) Could not multiplex stream. ../../dev/gstreamer/subprojects/gst-plugins-good/gst/isomp4/gstqtmux.c(5410): gst_qt_mux_add_buffer (): /GstPipeline:mediaCapturePipeline/GstEncodeBin:encodebin/GstMP4Mux:muxer:
      Buffer has no PTS.
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-124183
          # Subject Branch Project Status CR V

          Activity

            People

              timblechmann tim blechmann
              timblechmann tim blechmann
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes