GStreamer: QGstreamerMediaEncoder - fix duration updates

`QGstreamerMediaEncoder` has a timer to update the duration. This timer
is stopped when `pause` or `stop`. We should update the duration in this
case to cope with the duration that may have expired since the last
update.

Task-number: QTBUG-124183
Pick-to: 6.5
Change-Id: Ia8b0df7a1e19917b137260069eba1c053188c2b0
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 99a7883607b4fe1fd8afaebe6ea87be5f4a36f2d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>